# tbats-jax

./: .gitignore  LICENSE  README.md  STATUS.md  conftest.py  pyproject.toml  requirements.txt
benchmarks/: bench_oos.py  bench_panel_full.py  bench_r.R  bench_r.py  bench_real.py  bench_single.py  colab_daily_panel.py  colab_panel_gpu.py  data.py  fetch_real_data.R
docs/: DEV_NOTES.md
notebooks/: colab_accelerators.ipynb  colab_daily_panel.ipynb  colab_panel_gpu.ipynb
tbats_jax/: __init__.py  admissibility.py  auto.py  bayesian.py  boxcox.py  datasets.py  fit.py  fit_jax.py  fit_lm.py  fit_scan.py  forecast.py  kernel.py  matrices.py  params.py  seed_state.py  spec.py  transforms.py
tests/: test_datasets.py  test_regressions.py  test_smoke.py
