[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tbats_jax"
version = "0.0.1"
description = "Fixed-structure TBATS fit in JAX"
requires-python = ">=3.10,<3.13"
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "optimistix>=0.1.0",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
bench = ["tbats>=1.1.3", "matplotlib>=3.8"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["tbats_jax*"]
exclude = ["benchmarks*", "tests*", "notebooks*"]
